tests/ui/fail_datagram_final_encoder_mismatch.stderr
error[E0277]: the trait bound `Utf8DatagramCodec: DatagramEncoder<Response>` is not satisfied
  --> tests/ui/fail_datagram_final_encoder_mismatch.rs:20:10
   |
20 |         .pipeline(|| datagram_pipeline().codec(Utf8DatagramCodec).handler(Route));
   |          ^^^^^^^^ the trait `DatagramEncoder<Response>` is not implemented for `Utf8DatagramCodec`
   |
help: the trait `DatagramEncoder<Response>` is not implemented for `Utf8DatagramCodec`
      but trait `DatagramEncoder<String>` is implemented for it
  --> src/codec/utf8_datagram.rs
   |
   | impl DatagramEncoder<String> for Utf8DatagramCodec {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: for that trait implementation, expected `String`, found `Response`
   = note: required for `DatagramPipelineBuilder<rs_netty::pipeline::state::Ready, Utf8DatagramCodec, Identity, Identity, Route, Identity, String, Response, Response>` to implement `IntoDatagramPipeline`
note: required by a bound in `UdpServer::pipeline`
  --> src/transport/udp/server.rs
   |
   |     pub fn pipeline<F, B, P>(self, factory: F) -> UdpServer<F>
   |            -------- required by a bound in this associated function
...
   |         B: IntoDatagramPipeline<Pipeline = P>,
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `UdpServer::pipeline`
